# mcga-test

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CPPLINT.cfg  Doxyfile  README.md  build.sh  build_kktest_shared_lib.cmake  compile.sh  compile_dev.sh  compile_prod.sh  copy.sh  dev_install.sh  install.sh  install_dev.sh  kktest.cmake  kktest_library.cmake  ktest  runtime_testing  test.py  test.sh  testing.hpp  uninstall.sh
common/fsystem/: CMakeLists.txt
common/fsystem/include/: error.hpp  extension.hpp  file.hpp  folder.hpp  fsystem  fsystem.hpp  path.hpp
common/fsystem/src/: error.cpp  extension.cpp  file.cpp  folder.cpp  path.cpp
common/interproc/: CMakeLists.txt  message.cpp  message.hpp  pipe.cpp  pipe.hpp  pipe_posix.cpp  subprocess.hpp  subprocess_posix.cpp  worker_subprocess.cpp  worker_subprocess.hpp
common/interproc/src/: errors.cpp  errors.hpp  message.cpp  message.hpp  message_reader.cpp  pipe.cpp  pipe.hpp  pipe_posix.cpp  subprocess.cpp  subprocess.hpp  subprocess_posix.cpp  timed_worker_subprocess.cpp  timed_worker_subprocess.hpp  worker_subprocess.cpp  worker_subprocess.hpp
common/interproc/tests/: main.cpp  message_test.cpp  pipe_test.cpp  subprocess_test.cpp  worker_subprocess_test.cpp
common/logging/: CMakeLists.txt
common/messaging/: CMakeLists.txt
common/strutil/: CMakeLists.txt
core/: CMakeLists.txt
core/include/: kktest.hpp  kktest_extension_api.hpp
core/src/: box_executor.cpp  box_executor.hpp  config.cpp  definers.cpp  driver.cpp  driver.hpp  errors.cpp  errors.hpp  executor.cpp  executor.hpp  export.hpp  extension_api.cpp  extension_api.hpp  extension_api_impl.cpp  extension_api_impl.hpp  group.cpp  group.hpp  hooks.hpp  info.cpp  info.hpp  kktest.cpp  main.cpp  main.hpp  test.cpp  test.hpp  test_case_registry.cpp  test_case_registry.hpp  test_container.cpp  test_container.hpp  test_run.cpp  test_run.hpp
entry/: CMakeLists.txt  entry_point.cpp
extensions/core_matchers/: CMakeLists.txt  extension.yaml
extensions/death/: CMakeLists.txt
extensions/feedback/: CMakeLists.txt  extension.yaml
extensions/test_runner/: CMakeLists.txt  extension.yaml
kktest/: CMakeLists.txt  entry_point.cpp
kktest/core/: CMakeLists.txt  box_executor.cpp  box_executor.hpp  driver.cpp  driver.hpp  errors.hpp  executed_test.cpp  executed_test.hpp  executor.cpp  executor.hpp  export.hpp  extension.hpp  group.cpp  group.hpp  hooks_manager.hpp  kktest.cpp  main.cpp  main.hpp  test.cpp  test.hpp  time_tick.cpp  time_tick.hpp  time_tick_length.cpp  warning.cpp  warning.hpp
kktest/examples/: CMakeLists.txt  basic.cpp
kktest/include/: kktest  kktest_plugin_api.hpp
kktest/src/: main.cpp
kktest_common/strutil/: CMakeLists.txt
kktest_core/: CMakeLists.txt
kktest_core/examples/: basic.cpp  group.cpp  set_up_tear_down.cpp
kktest_core/include/: kktest  kktest.hpp  kktest_extension_api  kktest_extension_api.hpp  kktest_plugin_api.hpp
kktest_core/src/: arguments_api.cpp  arguments_api_impl.cpp  arguments_api_impl.hpp  box_executor.cpp  box_executor.hpp  definers.cpp  driver.cpp  driver.hpp  errors.cpp  errors.hpp  executor.cpp  executor.hpp  extension_api_impl.cpp  extension_api_impl.hpp  group.cpp  group.hpp  main.cpp  plugin_api.cpp  plugin_api_impl.cpp  plugin_api_impl.hpp  test.cpp  test.hpp  test_case_registry.cpp  test_case_registry.hpp  test_container.cpp  test_container.hpp
kktest_extensions/core_matchers/: CMakeLists.txt  extension.json  extension.yaml
kktest_extensions/feedback/: CMakeLists.txt  extension.json  extension.yaml
kktest_extensions/test_runner/: CMakeLists.txt  extension.json
kktest_lib/: CMakeLists.txt  kktest.cmake  kktest_library.cmake
kktest_lib/concept/: std_vector_test.cpp
kktest_lib/include/: kktest  kktest_definers.hpp  kktest_executable.hpp  kktest_macros.hpp  kktest_matcher.hpp  kktest_streamer.hpp  kktest_testcase.hpp
kktest_lib/src/: kktest
kktest_lib/tests/: CMakeLists.txt
kktest_lib/wiki_examples/: set_up_tear_down_good.cpp
kktest_runner/: CMakeLists.txt  entry_point.cpp
kktest_runner/explorer/: explorer.cpp  explorer.hpp
kktest_runner/os/: error.cpp  error.hpp  extension.cpp  extension.hpp  file.cpp  file.hpp  folder.cpp  folder.hpp  path.cpp  path.hpp
kktest_runner/src/: entry_point.cpp
kktest_runner/utils/: string.cpp
lib/: CMakeLists.txt  kktest.cmake
lib/concept/: std_vector_test.cpp
lib/examples/: CMakeLists.txt  std_vector_test.cpp
lib/include/: kktest  kktest.hpp  kktest_filename.hpp  kktest_matchers  kktest_matchers.hpp  kktest_streamer.hpp
lib/src/: main.cpp
lib/tests/: CMakeLists.txt
lib/wiki_examples/: set_up_tear_down_bad.cpp  set_up_tear_down_good.cpp
messaging_lib/: CMakeLists.txt
messaging_lib/include/: input_pipe.hpp  message.hpp  message_reader.hpp  messaging  output_pipe.hpp  pipe.hpp
messaging_lib/src/: input_pipe.cpp  message.cpp  message_reader.cpp  output_pipe.cpp  pipe.cpp
runner/: CMakeLists.txt
runner/os/: extension.cpp  extension.hpp  file.cpp  folder.cpp  path.cpp
runner/src/: entry_point.cpp
runner/utils/: string.hpp
tests/: CMakeLists.txt  all_tests.cpp
tests/basic/: configs.cpp
tests/core/: CMakeLists.txt
tests/extensions/: CMakeLists.txt
tests/integration/: emit_warnings.cpp  exit_0.cpp  exit_1.cpp  fail.cpp  fail_in_cleanup.cpp  fail_in_set_up.cpp  fail_in_tear_down.cpp  fail_in_thread.cpp  fixtures_api.cpp  freestanding.cpp  kbs.cpp  multiple_executions_fail.cpp  multiple_executions_pass.cpp  multiple_executions_skip.cpp  multiple_files.cpp  multiple_test_cases.cpp  multiple_tests_one_fails.cpp  optional_fail.cpp  pass.cpp  set_up_tear_down_order.cpp  set_up_tear_down_proc.cpp  skip_in_set_up.cpp  skip_in_tear_down.cpp  skipped_test.cpp  skipped_test_thread.cpp  test_integration.py  timeout.cpp
tests/matcher/: comparison_matcher_test.cpp  truth_matcher_test.cpp
tests/matchers/: comparison_matcher_test.cpp  equality_matcher_test.cpp  iterable_matcher_test.cpp  matcher_test.hpp  truth_matcher_test.cpp
tests/unit/: check_death_test.cpp  death_matchers_test.cpp  function_mock_test.cpp
(+1028 files in other folders)
